# proABC-2

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Jenkinsfile  ParaNet.py  ParaNet_v2.data-00001-of-00002  ParseHmmer.py  README.md  THIRD_PARTY.md  clr_fun.py  cnn.py  environment.yml  jobinput.py  proABC.py  pyproject.toml  run-proABC2-web.py  test_jobinput.py  test_out.py
.github/workflows/: ci.yml  docker-publish.yml
.trunk/: trunk.yaml
Example/: ._heavy-pred.csv  heavy-pred.csv  heavy.fasta  heavy.germ  heavy_format.fasta  light-pred.csv  light.germ  light_format.fasta
Example/alignments/: heavy_1.fasta  light_1.fasta
Example2/: Example2-features.csv  heavy-pred.csv  heavy.fasta  heavy.germ  heavy_format.fasta  light-pred.csv  light.fasta  light.germ  light_format.fasta
Example2/alignments/: heavy_1.fasta  light_1.fasta
MarkovModels/: HEAVY.hmm  HEAVY.hmm.h3f  HEAVY.hmm.h3i  HEAVY.hmm.h3m  HEAVY.hmm.h3p  KAPPA.hmm.h3f  KAPPA.hmm.h3i  KAPPA.hmm.h3m  LAMBDA.hmm.h3f  LAMBDA.hmm.h3m  LAMBDA.hmm.h3p
Test_data/: heavy-pred.csv  light-pred.csv  light.fasta
database/: ._IGHDp.fasta  ._IGHJp.fasta  ._IGHVp.fasta  ._IGKJp.fasta  ._IGKVp.fasta  ._IGLJp.fasta  ._IGLVp.fasta  IGHDp.fasta.phr  IGHDp.fasta.psd  IGHDp.fasta.psi  IGHDp.fasta.psq  IGHJp.fasta  IGHJp.fasta.pin  IGHJp.fasta.psd  IGHVp.fasta  IGHVp.fasta.phr  IGHVp.fasta.pin  IGHVp.fasta.psd  IGHVp.fasta.psi  IGKJp.fasta.phr  IGKJp.fasta.psi  IGKVp.fasta.pin  IGKVp.fasta.pog  IGKVp.fasta.psi  IGKVp.fasta.psq  IGLJp.fasta  IGLVp.fasta.phr  IGLVp.fasta.pin  IGLVp.fasta.psd  IGLVp.fasta.psq
src/proabc_2/: ParseHmmer.py  __init__.py  clr_fun.py  cnn.py  jobinput.py  numbering.py  proABC.py
src/proabc_2/MarkovModels/: HEAVY.hmm.h3p  KAPPA.hmm  KAPPA.hmm.h3m  KAPPA.hmm.h3p  LAMBDA.hmm  LAMBDA.hmm.h3i  LAMBDA.hmm.h3p
src/proabc_2/data/: Sparse_encoding_v2.txt  proABC_v2.index
src/proabc_2/database/: IGHDp.fasta  IGHDp.fasta.pin  IGHJp.fasta.phr  IGHJp.fasta.psi  IGHJp.fasta.psq  IGHVp.fasta.pog  IGHVp.fasta.psq  IGKJp.fasta  IGKJp.fasta.pin  IGKJp.fasta.psd  IGKJp.fasta.psq  IGKVp.fasta  IGKVp.fasta.phr  IGKVp.fasta.psd  IGLJp.fasta.phr  IGLJp.fasta.pin  IGLJp.fasta.psd  IGLJp.fasta.psi  IGLJp.fasta.psq  IGLVp.fasta  IGLVp.fasta.pog  IGLVp.fasta.psi
tests/: __init__.py  test_jobinput.py  test_out.py
tests/golden_data/: Test-features.csv  heavy_test.fasta  light_test.fasta
